# vikingdb-mcp-server

./: README.md  pyproject.toml
src/mcp_server_vikingdb/: server.py  vikingdb.py
