[project]
name = "mcp-server-vikingdb"
version = "0.1.0"
description = "a mcp server for vikingdb store and search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.1.0",]
[[project.authors]]
name = "KashiwaByte"
email = "471314513@qq.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-vikingdb = "mcp_server_vikingdb:main"
